hphp/hack/test/typecheck/reactive/rx_of_scope10.php.exp
File "rx_of_scope10.php", line 10, characters 14-15:
Invalid argument (Typing[4203])
  File "rx_of_scope10.php", line 14, characters 21-41:
  This function is reactive.
  File "rx_of_scope10.php", line 8, characters 10-17:
  This function is local reactive.
